--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,7 @@ header {
     width: 100%;
 }
 
+
 nav ul {
     list-style: none;
     padding: 0;
@@ -111,7 +112,7 @@ main {
 }
 
 .slideshow-container {
-    max-width: 800px;
+    max-width: 900px;
     position: relative;
     margin: 20px auto;
 }
@@ -119,7 +120,7 @@ main {
 .slideshow-img {
     width: 100%;
     height: auto;
-    max-height: 400px;
+    /*max-height: 400px;*/
     display: block;
     margin: 0 auto;
     border: 2px solid #333; /* Adds a 2px solid black border */
@@ -185,4 +186,15 @@ main {
 @keyframes fade {
     from {opacity: .4}
     to {opacity: 1}
+}
+
+
+.project-list ul {
+    list-style-type: disc;
+    padding-left: 20px;
+}
+
+.project-list li {
+    margin-bottom: 10px;
+    font-size: 16px;
 }
