get rid of sticky footer

--- a/css/style.css
+++ b/css/style.css
@@ -275,7 +275,7 @@ main {
 
 
 .footer {
-    position: fixed;
+    /*position: fixed;*/
     bottom: 0;
     width: 100%;
     background-color: white;  /* Match your background color */
