--- a/css/style.css
+++ b/css/style.css
@@ -298,6 +298,15 @@ main {
     line-height: 1.7;
 }
 
+.bio ul {
+    color: var(--text-secondary);
+    padding-left: 1.5rem;
+}
+
+.bio li {
+    margin-bottom: 0.25rem;
+}
+
 .bio a {
     color: var(--accent-primary);
     text-decoration: none;
